Thu Feb 19 16:49:48 1998 John Metzler  <jmetzler@cygnus.com>

	* target.c - tracing 64 bit targets crashed long long printfs

Tue Feb 17 16:36:22 1998  Michael Snyder  (msnyder@cleaver.cygnus.com)

	* symfile.c (read_target_int_array): rename read_target_long_array
        and force the sizeof an ovly_table element to sizeof(long),
        instead of sizeof(int).

Tue Feb 17 18:05:05 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* remote-mips.c (mips_request): Use unsigned long during parsing
 	returned value from monitor, to prevent accidental sign extension.

Tue Feb 17 14:28:33 1998  Peter Schauer <pes@regent.e-technik.tu-muenchen.de>

        * acconfig.h: FORCE_MMCHECK changed to MMCHECK_FORCE.
        * configure.in: Ditto.
        * configure: Regenerated.

Tue Feb 17 14:07:34 1998  Peter Schauer <pes@regent.e-technik.tu-muenchen.de>

        * gdbtypes.c (check_typedef): Do not try to resolve the length of      
        a type which has TYPE_FLAG_TARGET_STUB set, if the target type has      
        set TYPE_FLAG_TARGET_STUB as well.

Tue Feb 17 14:32:18 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote-sim.c (gdbsim_fetch_register, gdbsim_store_register):
 	Pass register size to sim_{fetch,store}_register.  Check nr of
 	register bytes transfered is correct.

Mon Feb 16 14:05:54 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote-d10v.c (remote_d10v_open): Call push_remote_target
 	instead of open_remote_target.

	* remote.c (remote_xfer_memory): Use REMOTE_TRANSLATE_XFER_ADDRESS
 	to translate addr/size when defined.
	(open_remote_target): Delete.
	
	* target.h (open_remote_target): Delete.
	
	* config/d10v/tm-d10v.h (REMOTE_TRANSLATE_XFER_ADDRESS): Define.
	
Mon Feb 16 14:05:54 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/d10v/tm-d10v.h (USE_STRUCT_CONVENTION): Define. True when
 	sizeof type > 1.

Mon Feb 16 14:05:54 1998  Andrew Cagney  <cagney@b1.cygnus.com>

	* config/d10v/tm-d10v.h (USE_STRUCT_CONVENTION): Define. True when